# ic-project

./: .gitignore  ASSET_SOURCES.md  BRANCH_GUIDE.md  CMakeLists.txt  README.md  TEAM_GUIDE.md  build.cmd  build.ps1  run.cmd  run.ps1
src/: main.cpp
src/Core/: Config.h  Game.cpp  Game.h  GameState.h
src/Entities/: Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  Player.cpp  Player.h
src/States/: GameOverState.cpp  GameOverState.h  GameplayState.cpp  GameplayState.h  MenuState.cpp  MenuState.h
src/Systems/: CollisionSystem.cpp  CollisionSystem.h  PhaseManager.cpp  PhaseManager.h  SpawnSystem.cpp  SpawnSystem.h
src/UI/: HUD.cpp  HUD.h
tools/: generate_assets.ps1
